fix(text-heavy): anchor alignment, top text spacing

--- a/src/components/common/container.module.scss
+++ b/src/components/common/container.module.scss
@@ -29,8 +29,7 @@
       font-size: 30px;
       font-size: 1.875rem;
       line-height: 37.5px;
-      margin: 2rem 0 0.5rem;
-      padding-top: 1em;
+      margin: 4rem 0 0.5rem;
     }
     h3 {
       margin-bottom: 1em;
